Added ExceptionHandling for Auth, Person and Notification Controllers.